--- a/styles/equipment.css
+++ b/styles/equipment.css
@@ -5,7 +5,7 @@
 }
 
 .carousel.slide.equipment {
-  height: 1200px !important;
+  height: 950px !important;
   margin: 2% 0% 2% 5% !important;
 }
 
@@ -25,7 +25,11 @@
 }
 
 a.left.equipment.carousel-control, a.right.equipment.carousel-control {
-    top: 40%;
+    top: 30%;
+}
+
+a.right.equipment.carousel-control {
+    left: 108.5%;
 }
 
 span.glyphicon.equipment.right {
