--- a/styles/main.css
+++ b/styles/main.css
@@ -138,6 +138,48 @@ ul.nav.navbar-nav {
     padding-right: 102px !important;
 }
 
+/* Drop Down Nav */
+
+
+
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    background-color: transparent;
+}
+
+ul.dropdown-menu {
+    border: 0px !important;
+}
+
+.dropdown ul {
+  position: absolute;
+  top: 18px;
+  border-radius: 3px;
+  left: 0px;
+  list-style: none;
+  padding: 4px 0px;
+  display: none;
+  background-color: white;
+  box-shadow: 0 3px 6px rgba(0,0,0,.175);
+}
+
+.dropdown ul li {
+  display: block;
+  padding: 6px 20px;
+  white-space: nowrap;
+  min-width: 100px;
+}
+
+.dropdown ul li:hover {
+  background-color: #F5F5F5;
+  cursor: pointer;
+}
+
+.dropdown ul li a {
+  text-decoration: none;
+  display: block;
+  color: black
+}
+
 /* Title Header */
 
 .title-head {
