--- a/styles/main.css
+++ b/styles/main.css
@@ -102,6 +102,7 @@ ul.nav.navbar-nav {
   float: right;
   padding: 0;
   margin: 0;
+  padding-right: 102px !important;
 }
 
 .navbar.navbar-default {
@@ -134,9 +135,9 @@ ul.nav.navbar-nav {
     letter-spacing: 2px;
 }
 
-.navbar-collapse {
+/*.navbar-collapse {
     padding-right: 102px !important;
-}
+}*/
 
 /* Drop Down Nav */
 
@@ -692,12 +693,23 @@ address {
 .form-control {
   background-color: #252323;
   border-radius: 0px;
+  color: #fff;
 }
 
 ul.footer-list {
    list-style: none;
    padding: 10px;
    color: #999999;
+}
+
+input#mc-embedded-subscribe {
+    color: silver;
+    background: #252323;
+    padding: 2% 8%;
+}
+
+input, select, textarea{
+    color: #fff;
 }
 
 /* Get Connected */
