--- a/styles/equipment.css
+++ b/styles/equipment.css
@@ -5,7 +5,7 @@
 }
 
 .carousel.slide.equipment {
-  height: 1200px !important;
+  height: 100% !important;
   margin: 2% 0% 2% 5% !important;
 }
 
@@ -50,4 +50,39 @@ span.glyphicon.equipment.left {
     height: 101px;
     background: url(images/left_grey.png) no-repeat;
     cursor: pointer;
+}
+
+.flexbox_container {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-around;
+  box-sizing: border-box;
+}
+
+#board_table {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  text-align: center;
+}
+
+#board_table img {
+  width: 100%;
+  box-shadow: 2px 2px 2px hsla(0, 0%, 23%, 0.81);
+  border-radius: 10px;
+}
+
+#board_table img:hover {
+  opacity: 0.8;
+  transition: opacity .15s ease-in-out;
+  -moz-transition: opacity .15s ease-in-out;
+  -webkit-transition: opacity .15s ease-in-out;
+
+}
+
+.surfboard-grid {
+  width: 33%;
+  float: left;
+  height: auto;
 }
