--- a/styles/modal.css
+++ b/styles/modal.css
@@ -4,24 +4,84 @@
     padding: 2%;
 }
 
+/* Larger Modal */
+
+div#myModal {
+    z-index: 10001;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  /*overflow: hidden;*/
+}
+
 .modal-content {
-  height: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+/*  border: 2px solid #3c7dcf;*/
+  border-radius: 0;
+  box-shadow: none;
+  border: 0px !important;
 }
 
 .modal-dialog {
-  width: 930px;
-  margin-left: auto;
-  margin-right: auto;
+  /*position: fixed;*/
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
 }
 
-.modal-header {
+/*.modal-header {
   color: #003859;
   margin: 2% 0%;
   border-bottom: 0px !important;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 50px;
+  padding: 10px;
+  background: #6598d9;
+  border: 0;
+}*/
+
+.modal-header {
+  border-bottom: 0px !important;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 50px;
+  padding: 10px;
+  border: 0;
 }
 
 .modal-title {
   font-weight: 600;
+}
+
+.modal .col-1 {
+    width: 50%;
+    float: left;
+    padding: 2%;
+}
+
+.modal .col-2 {
+    margin-top: 10%;
+    padding: 2% 15% 5% 5%;
+}
+
+.modal-body img {
+    width: 100%;
+    margin-top: 10%;
 }
 
 .modal-description {
@@ -32,6 +92,19 @@
 
 .modal-body h1 {
   color: #003859;
+  width: 100%;
+  font-weight: 300;
+  padding-left: 10%;
+}
+
+.modal-footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 60px;
+  padding: 10px;
+  background: #f1f3f5;
 }
 
 a.left.carousel-control.timeline,
