--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -450,11 +450,11 @@ input[type="submit"] {
  * Re-set default cursor for disabled elements.
  */
 
-button[disabled],
+/*button[disabled],
 html input[disabled] {
     cursor: default;
 }
-
+*/
 /**
  * 1. Address box sizing set to content-box in IE 8/9.
  * 2. Remove excess padding in IE 8/9.
