--- a/styles/photo.css
+++ b/styles/photo.css
@@ -1,3 +1,12 @@
+/* Brand Colors 
+
+Primary Blue: #0a3859 
+Secondary Blue: #00c1d9
+Accent Color: #FFBC00
+Site Grey: #6B6D76;
+Ice White: #f4fafe;
+*/
+
 /* Header */
 
 .photo-grid-head h2 {
@@ -31,65 +40,18 @@ h1#photogs {
     -webkit-animation-name: slidein;
 }
 
-/*h1.local-photogs {
-    animation-duration: 1.4s;
-    animation-name: slidein;
-    -moz-animation-duration: 1.4s;
-    -webkit-animation-duration: 1.4s;
-    -moz-animation-name: slidein;
-    -webkit-animation-name: slidein;
+.interviews {
+    width: 100%;
+    background: #fff;
+    position: relative;
+    text-align: center;
+    padding: 2% 0%;
+    border-top: 1px solid #dcdcdc;
 }
 
-h2.local-photogs {
-    animation-duration: 1.8s;
-    animation-name: slidein;
-    -moz-animation-duration: 1.8s;
-    -webkit-animation-duration: 1.8s;
-    -moz-animation-name: slidein;
-    -webkit-animation-name: slidein;
-}*/
-
-
-
-@keyframes slideRight {
-    0% {
-      transform: translateX(-150%);
-    }
-    50% {
-      transform: translateX(8%);
-    }
-    65% {
-      transform: translateX(-4%);
-    }
-    80% {
-      transform: translateX(4%);
-    }
-    95% {
-      transform: translateX(-2%);
-    }
-    100% {
-      transform: translateX(0%);
-    }
-}
-@-webkit-keyframes slideRight {
-    0% {
-      -webkit-transform: translateX(-150%);
-    }
-    50% {
-      -webkit-transform: translateX(8%);
-    }
-    65% {
-      -webkit-transform: translateX(-4%);
-    }
-    80% {
-      -webkit-transform: translateX(4%);
-    }
-    95% {
-      -webkit-transform: translateX(-2%);
-    }
-    100% {
-      -webkit-transform: translateX(0%);
-    }
+.interviews {
+    float: left;
+    width: 100%;
 }
 
 /* Carousel Start */
@@ -175,77 +137,80 @@ img.photog-headshot {
   border: .5px solid #bebebe;
 }
 
-figure { 
+/* Overlay from this Codepen: https://codepen.io/anon/pen/NOgEdY */
+
+.content { 
   display: block; 
   position: relative; 
   overflow: hidden; 
 }
 
-figcaption { 
-  position: absolute; 
-  background: rgba(0,0,0,0.75); 
-  color: white; 
-  padding: 10px 20px;
-  border-radius: 0px 5px 0px 0px; 
-}
-
-figcaption { 
+.content .content-overlay {
+  background: rgba(10, 56, 89, 0.7);
   position: absolute;
-  width: auto; 
-  background: rgba(0,0,0,0.75); 
-  color: white; 
-  padding: 10px 20px; 
-  opacity: 0;
-  bottom: 0; 
-  left: -30%;
-  -webkit-transition: all 0.6s ease;
-  -moz-transition:    all 0.6s ease;
-  -o-transition:      all 0.6s ease;
-}
-
-figcaption p {
-    margin-bottom: 0px !important;
-}
-
-figure:hover figcaption {
-  opacity: 1;
+  height: 100%;
+  width: 100%;
   left: 0;
-}
-
-/*figure:before { 
-  content: "?"; 
-  position: absolute; 
-  background: rgba(255,255,255,0.75); 
-  color: black;
-  width: 24px;
-  height: 24px;
-  -webkit-border-radius: 12px;
-  -moz-border-radius:    12px;
-  border-radius:         12px;
-  text-align: center;
-  font-size: 14px;
-  line-height: 24px;
-  /* Only Fx 4 supporting transitions on psuedo elements so far...
-  -webkit-transition: all 0.6s ease;
-  -moz-transition: all 0.6s ease;
-  -o-transition: all 0.6s ease;
-  opacity: 0.75;  
-}
-
-figure:hover:before {
+  top: 0;
+  bottom: 0;
+  right: 0;
   opacity: 0;
-}*/
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
 
-.cap-left:before {  bottom: 10px; left: 10px; }
+.content:hover .content-overlay{
+  opacity: 1;
+}
 
-.cap-left figcaption { bottom: 0; left: -30%; }
-.cap-left:hover figcaption { left: 0; }
+.content-image{
+  width: 100%;
+}
 
-.cap-right figcaption { bottom: 0; right: -30%; }
-.cap-right:hover figcaption { right: 0; }
+.content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
 
-.cap-top figcaption { left: 0; top: -30%; }
-.cap-top:hover figcaption { top: 0; }
+.content:hover .content-details{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
 
-.cap-bot figcaption { left: 0; bottom: -30%;}
-.cap-bot:hover figcaption { bottom: 0; }
+.content-details h1 {
+  color: #fff;
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+}
+
+.content-details p {
+  color: #fff;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.fadeIn-bottom {
+  top: 80%;
+}
+
+.fadeIn-top {
+  top: 20%;
+}
+
+/* End Overlay */
