--- a/styles/equipment.css
+++ b/styles/equipment.css
@@ -70,11 +70,10 @@ span.glyphicon.equipment.left {
 }
 
 #board_table img:hover {
-  opacity: 0.8;
+  opacity: 1;
   transition: opacity .15s ease-in-out;
   -moz-transition: opacity .15s ease-in-out;
   -webkit-transition: opacity .15s ease-in-out;
-
 }
 
 .surfboard-grid {
@@ -95,4 +94,75 @@ span.glyphicon.equipment.left {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+/* Figure Caption */
+
+.equip-content { 
+  display: block; 
+  position: relative; 
+}
+
+.equip-content .equip-content-overlay {
+  background: rgba(10, 56, 89, 0.7) !important;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.equip-content:hover .equip-content-overlay {
+  opacity: 1;
+}
+
+figure { 
+  display: block; 
+  position: relative; 
+  overflow: hidden; 
+}
+
+figcaption { 
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+figcaption.fadeIn-bottom h1 {
+    color: #fff;
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+}
+
+figcaption p {
+  margin-bottom: 0px !important;
+  color: #fff;
+  font-size: 1.5em;
+  text-align: center;
+  font-variant: small-caps;
+}
+
+figure:hover figcaption {
+  top: 50%;
+  left: 50%;
+  opacity: 1;
 }
