--- a/styles/animated-slides.css
+++ b/styles/animated-slides.css
@@ -14,25 +14,27 @@ body, html {
 section#titlechart {
   text-align: center;
   position: relative;
-  height: 100%;
-  min-height: 500px;
   min-width: 100%;
-  height: 100vh;
+
 }
 
 section#titlechart #description {
   top: 50%;
   left: 76.5%;
   position: absolute;
-  width: 600px;
+  width: 38%;
   height: 300px;
   margin: -150px auto auto -300px;
 }
 
 .desc-inner {
-  padding: 5%;
-  background: hsla(0, 0%, 39%, 0.5);
+  padding: 2% 5% 5%;
+  background: rgba(10, 56, 89, 0.7);
   color: #fff;
+}
+
+.desc-inner p {
+  font-size: 1.2em;
 }
 
 #example-wrapper .scrollContent div {
@@ -97,7 +99,7 @@ div#one-description {
     top: 50%;
     left: 76.5%;
     position: absolute;
-    width: 600px;
+    width: 38%;
     height: 300px;
     margin: -150px auto auto -300px;
 }
@@ -106,7 +108,7 @@ div#two-description {
     top: 50%;
     left: 76.5%;
     position: absolute;
-    width: 600px;
+    width: 38%;
     height: 300px;
     margin: -150px auto auto -300px;
 }
