--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,3 +1,14 @@
+/*
+Site:       Nalu.live
+Author:     Steve Dillon
+Converted:  July, 2018
+
+Table of Contents
+1.  GLOBAL
+2.  PHOTOGRAPHER's PAGE MODAL
+3.  EQUIPMENT PAGE MODAL
+4.  TIMELINE PAGE MODAL
+
 /**, *:before, *:after {
 border: 1px solid red;
 }
@@ -61,20 +72,6 @@ div#myModal {
 .modal-body {
   min-height: 100vh !important;
 }
-
-/* Image Grid Start */
-
-.p-grid {
-  width: 48%;
-  float: left;
-  margin: 0% 0% 2% 2%;
-}
-
-.p-img-group img {
-  margin-top: 0% !important;
-}
-
-/* Image Grid End */
 
 .modal-description {
   font-size: 1.2em;
@@ -189,9 +186,42 @@ ul.pagination.timeline.mx-auto.text-center {
   outline: none !important;
 }
 
-/* Image Grid End */
+/* =======================================
+PHOTOGRAPHER's PAGE MODAL
+======================================= */
 
-/* Equipment Modal Start */
+/* ---- Photographer's Page Image Grid Start ---- */
+
+.p-grid {
+  width: 48%;
+  float: left;
+  margin: 0% 0% 2% 2%;
+}
+
+.p-img-group img {
+  margin-top: 0% !important;
+}
+
+/* ---- Photographer's Page Image Grid End ---- */
+
+/* =======================================
+EQUPMENT PAGE MODAL
+======================================= */
+
+.col-sm-6 h1 {
+  text-align: center;
+  margin-bottom: 1%;
+}
+
+.b-img-group img {
+  margin-top: 0% !important;
+  border: 1px solid #000;
+}
+
+.b-grid {
+  width: 70%;
+  margin: auto;
+}
 
 .modal-body h1 {
   color: #003859;
@@ -231,7 +261,9 @@ button#second-close {
     position: absolute;
 }
 
-/* Timeline Modal */
+/* =======================================
+TIMELINE PAGE MODAL
+======================================= */
 
 .p-img-wrapper.timeline h1 {
   color: #003859;
